Feat: created Tests for StringManipulation Class